Completed the delete button feature, read button feature will be added soon.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <td>Year</td>
                 <td>Author</td>
                 <td>Read Status</td>
+                <td>Operations</td>
             </tr>
         </thead>
 
