Add some styling to the table and the buttons, more styling will be added soon.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <table id="bookTable">
         <thead>
             <tr>
-                <td>Title</td>
-                <td>Year</td>
-                <td>Author</td>
-                <td>Read Status</td>
-                <td>Operations</td>
+                <th>Title</th>
+                <th>Year</th>
+                <th>Author</th>
+                <th>Read Status</th>
+                <th>Operations</th>
             </tr>
         </thead>
 
