Added feature where the read button is able to change to unread button according to which state the book has been marked as

--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
         </form>
     </dialog>
 
-    <div>
-        <button id="openNewBookIntake">Add New Book</button>
-    </div>
-
     <table id="bookTable">
         <thead>
             <tr>
-                <th>Title</th>
+                <th>
+                    <div class="buttonContainer">
+                        <div>Title</div>
+                        <div>
+                            <button id="openNewBookIntake">Add New Book</button>
+                        </div>
+                    </div>
+                </th>
                 <th>Year</th>
                 <th>Author</th>
                 <th>Read Status</th>
